アニメーションのテスト

--- a/KiiTutorialApp/Base.lproj/Main.storyboard
+++ b/KiiTutorialApp/Base.lproj/Main.storyboard
@@ -747,6 +747,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="bri-aB-XEe"/>
-        <segue reference="vxm-Dw-L7z"/>
+        <segue reference="Tro-bv-nDc"/>
     </inferredMetricsTieBreakers>
 </document>
