--- a/KiiTutorialApp/Base.lproj/Main.storyboard
+++ b/KiiTutorialApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kR8-xF-Hkr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6249" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kR8-xF-Hkr">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6243"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -362,6 +362,27 @@
                                                 <constraint firstAttribute="width" constant="230" id="8qo-fo-Oay"/>
                                             </constraints>
                                         </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="fire" translatesAutoresizingMaskIntoConstraints="NO" id="bpA-JB-JrR">
+                                            <rect key="frame" x="17" y="0.0" width="42" height="55"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="42" id="4du-E3-Wni"/>
+                                                <constraint firstAttribute="height" constant="55" id="Wy5-fc-xvP"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="fire" translatesAutoresizingMaskIntoConstraints="NO" id="iFf-1x-T3o">
+                                            <rect key="frame" x="185" y="64" width="47" height="61"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="47" id="oai-RN-3D2"/>
+                                                <constraint firstAttribute="height" constant="61" id="sV3-mP-frw"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="fire" translatesAutoresizingMaskIntoConstraints="NO" id="AHQ-fZ-lCj">
+                                            <rect key="frame" x="55" y="106" width="40" height="51"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="40" id="Bf8-pz-rI9"/>
+                                                <constraint firstAttribute="height" constant="51" id="j6L-cp-N7c"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" red="0.2627450980392157" green="0.57647058823529407" blue="0.67843137254901964" alpha="0.0" colorSpace="calibratedRGB"/>
                                 </view>
@@ -689,6 +710,7 @@
         <image name="button_orange" width="270" height="53"/>
         <image name="button_red_mini" width="160" height="53"/>
         <image name="fat_level5_normal" width="459" height="329"/>
+        <image name="fire" width="157" height="200"/>
         <image name="grey_pressed.png" width="16" height="16"/>
         <image name="horizontal_line" width="320" height="1"/>
         <image name="logo" width="270" height="36"/>
