--- a/KiiTutorialApp/Base.lproj/Main.storyboard
+++ b/KiiTutorialApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="AJd-XI-DaP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="kR8-xF-Hkr">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -407,13 +407,13 @@
                                     </state>
                                     <connections>
                                         <action selector="stopCount:" destination="SZA-bT-fWq" eventType="touchUpInside" id="MER-VG-Mkp"/>
-                                        <segue destination="zph-I6-OOL" kind="modal" id="H7M-qj-9sT"/>
+                                        <segue destination="zph-I6-OOL" kind="modal" identifier="modalFinish" id="H7M-qj-9sT"/>
                                     </connections>
                                 </button>
                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qfa-r8-YPp">
                                     <rect key="frame" x="42" y="180" width="233" height="165"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="fat_level5_normal" translatesAutoresizingMaskIntoConstraints="NO" id="pHd-yk-5Mc">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="fat_level5_normal" translatesAutoresizingMaskIntoConstraints="NO" id="pHd-yk-5Mc">
                                             <rect key="frame" x="2" y="0.0" width="230" height="165"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="165" id="8qX-Ev-VGo"/>
@@ -653,19 +653,38 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xtR-zu-FRM">
-                                <rect key="frame" x="193" y="196" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="今回のカウント" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HrX-bP-fQA">
+                                <rect key="frame" x="108" y="61" width="119" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="CcF-0d-5AV"/>
+                                    <constraint firstAttribute="height" constant="20" id="ORG-eV-RqD"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y9h-Rm-x3f">
+                                <rect key="frame" x="139" y="118" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.25882352941176473" green="0.57647058823529407" blue="0.67843137254901964" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="HrX-bP-fQA" secondAttribute="centerX" id="5d2-Vf-Raf"/>
+                            <constraint firstItem="Y9h-Rm-x3f" firstAttribute="top" secondItem="HrX-bP-fQA" secondAttribute="bottom" constant="36" id="FSH-0S-LMc"/>
+                            <constraint firstAttribute="centerX" secondItem="Y9h-Rm-x3f" secondAttribute="centerX" id="K1f-ik-VUf"/>
+                            <constraint firstItem="HrX-bP-fQA" firstAttribute="top" secondItem="1wF-mX-uEo" secondAttribute="bottom" constant="40" id="KL5-Nh-qeU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="finishCountLabel" destination="Y9h-Rm-x3f" id="3ku-2U-L8g"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xP0-LU-wT1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2857" y="-2192"/>
+            <point key="canvasLocation" x="2855" y="-2192"/>
         </scene>
         <!--Title-->
         <scene sceneID="bgw-rJ-vR9">
